--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "codeapretzel-blog/public"]
-	path = codeapretzel-blog/public
-	url = https://github.com/CodeAPretzel/codeapretzel.github.io.git
+[submodule "themes/terminal"]
+	path = themes/terminal
+	url = https://github.com/panr/hugo-theme-terminal.git
 	branch = main
